dummy home page added

--- a/src/index.css
+++ b/src/index.css
@@ -27,10 +27,10 @@
 }
 /* primary colors */
 /* secondary colors */
-.text-telGreen {
+.text-tealGreen {
   color: #26a69a;
 }
-.bg-telGreen {
+.bg-tealGreen {
   background-color: #26a69a;
 }
 .text-softWhite {
