--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,17 @@
   color: #2979ff !important;
   font-weight: 900;
 }
+
+/* Hide scrollbar (Chrome, Safari, Edge) */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar (Firefox) */
+.scrollbar-hide {
+  scrollbar-width: none;
+}
+
 @keyframes slideDown {
   from {
     opacity: 0;
