--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
+@custom-variant dark (&:where(.dark, .dark *));
 @theme {
   --color-electricBlue: #2979ff;
   --color-vibrantPurple: #8e24aa;
@@ -20,38 +21,6 @@
 .body-font {
   font-family: "Inter", sans-serif;
 }
-/* primary colors */
-/* .text-electricBlue {
-  color: #2979ff;
-} */
-/* .bg-electricBlue {
-  background-color: #2979ff;
-} */
-/* W */
-/* .bg-vibrantPurple {
-  background-color: #8e24aa;
-} */
-/* primary colors */
-/* secondary colors */
-/* .text-tealGreen {
-  color: #26a69a;
-} */
-/* .bg-tealGreen {
-  background-color: #26a69a;
-} */
-/* .text-softWhite {
-  color: #fafafa;
-} */
-/* .bg-softWhite {
-  background-color: #fafafa;
-} */
-/* .text-charcoalGray {
-  color: #263238;
-} */
-/* .bg-charcoalGray {
-  background-color: #263238;
-} */
-/* secondary colors */
 
 .react-calendar__tile--active {
   background: #2979ff !important;
