custom color added and navbar themed

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
   --color-tealGreen: #20c997;
   --color-charcoalGray: #263238;
   --color-softWhite: #fafafa;
+  --color-deepCharcoal: #0f172a;
+  --color-darkSlate: #1e293b;
+  --color-coolGray: #9ca3af;
+  --color-dangerRed: #ef4444;
 }
 
 .logo-font {
